# zesty_backup

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  config.example.toml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  basic-backup.rs
src/: main.rs  providers.rs
tests/: README.md  backup_test.rs  integration_test.rs  provider_test.rs
